[build-system]
requires = ["setuptools"]

[project]
name = "xacro"
version = "2.0.10"
description = "xacro is a macro language for XML"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = ["pyyaml"]
requires-python = ">= 3.8"

[project.scripts]
xacro = "xacro:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["xacro"]
exclude = []
namespaces = false

[project.urls]
Documentation = "https://github.com/ros/xacro/wiki"
Repository = "https://github.com/ros/xacro"
